--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Lindbeck's Protfolio
+description: IT Support Associate II
 # show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
