--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Lindbeck's Protfolio
-description: IT Support Associate II
+title: Career Portfolio 
+description: Lindbeck's Portfolio
 # show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
