--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Career Portfolio
 description: Lindbeck's Portfolio
 # show_downloads: true
 google_analytics:
-theme: jekyll-theme-hacker
+theme: jekyll-theme-dinky
